--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <script type="text/javascript" src="app/lib/ngStorage.js"></script>
 <script type="text/javascript" src="app/lib/toaster.js"></script>
 <script type="text/javascript" src="app/lib/angular-base64-upload.js"></script>
+<script type="text/javascript" src="app/lib/acl.js"></script>
 
 <script type="text/javascript" src="app/js/app.js"></script>
 
