--- a/app/shared/article/guestView.html
+++ b/app/shared/article/guestView.html
@@ -5,7 +5,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-5 col-md-offset-1" ng-controller="LoginController">
+    <div class="col-md-5 col-md-offset-1" ng-controller="homeController">
         <toaster-container toaster-options="{'animation-class': 'toast-center'}"></toaster-container>
         <form name="loginForm" class="form-horizontal" autocomplete="off">
             <fieldset>
@@ -39,7 +39,7 @@
             </fieldset>
         </form>
     </div>
-    <div class="col-md-5" ng-controller="RegisterController">
+    <div class="col-md-5" ng-controller="homeController">
         <form name="registerForm" class="form-horizontal" autocomplete="off">
             <fieldset>
                 <div class="row">
