--- a/app/shared/article/guestView.html
+++ b/app/shared/article/guestView.html
@@ -48,33 +48,21 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="registerUsername" class="col-md-3 control-label">Username</label>
+                    <label for="inputEmail" class="col-md-3 control-label">Email</label>
                     <div class="col-md-9">
-                        <input type="text" required="required" class="form-control" ng-model="user.username" id="registerUsername" required="required" placeholder="Username">
+                        <input type="email" class="form-control" ng-model="user.email" id="inputEmail" required="required" placeholder="Email">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="registerPassword" class="col-md-3 control-label">Password</label>
                     <div class="col-md-9">
-                        <input type="password" required="required" minlength="3" maxlength="100" class="form-control" ng-model="user.password" id="registerPassword" required="required" placeholder="Password">
+                        <input type="password" minlength="3" maxlength="100" class="form-control" ng-model="user.password" id="registerPassword" required="required" placeholder="Password">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="registerConfirmPassword" class="col-md-3 control-label">Confirm password</label>
                     <div class="col-md-9">
-                        <input type="password" required="required" minlength="3" maxlength="100" class="form-control" ng-model="user.confirmPassword" id="registerConfirmPassword" required="required" placeholder="Confirm password">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="registerName" class="col-md-3 control-label">Name</label>
-                    <div class="col-md-9">
-                        <input type="text"  required="required" class="form-control" ng-model="user.name" id="registerName" required="required" placeholder="Name">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="inputEmail" class="col-md-3 control-label">Email</label>
-                    <div class="col-md-9">
-                        <input type="email" required="required" class="form-control" ng-model="user.email" id="inputEmail" required="required" placeholder="Email">
+                        <input type="password" minlength="3" maxlength="100" class="form-control" ng-model="user.confirmPassword" id="registerConfirmPassword" required="required" placeholder="Confirm password">
                     </div>
                 </div>
                 <div class="form-group">
