--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/bootstrap-theme.css">
+    <link rel="styleSheet" href="assets/css/ui-grid.css"/>
     <link rel="stylesheet" href="assets/css/toaster.css">
     <link rel="stylesheet" href="assets/css/app.css">
     <title>Issue Tracking System</title>
@@ -23,14 +24,18 @@
 <script type="text/javascript" src="assets/lib/ngStorage.js"></script>
 <script type="text/javascript" src="assets/lib/toaster.js"></script>
 <script type="text/javascript" src="assets/lib/angular-base64-upload.js"></script>
-<script type="text/javascript" src="assets/lib/acl.js"></script>
+<script type="text/javascript" src="assets/lib/ui-bootstrap.js"></script>
+<script type="text/javascript" src="assets/lib/ui-grid.min.js"></script>
 
 <script type="text/javascript" src="app/app.module.js"></script>
 <script type="text/javascript" src="app/app.routes.js"></script>
 
-<script type="text/javascript" src="app/components/users/credentialsService.js"></script>
 <script type="text/javascript" src="app/components/users/userService.js"></script>
+<script type="text/javascript" src="app/components/users/identity.js"></script>
 
+<script type="text/javascript" src="app/components/common/directives.js"></script>
+
+<script type="text/javascript" src="app/components/common/CommonController.js"></script>
 <script type="text/javascript" src="app/components/home/HomeController.js"></script>
 <script type="text/javascript" src="app/components/users/UsersController.js"></script>
 <script type="text/javascript" src="app/components/projects/ProjectsController.js"></script>
