--- a/app/shared/article/dashboardUserView.html
+++ b/app/shared/article/dashboardUserView.html
@@ -12,9 +12,7 @@
                 eeeeeee
             </div>
             <div class="col-md-4 col-md-offset-1" ng-controller="issuesController">
-
-                    <div id="grid1" ui-grid="{ data: myData }" class="grid"></div>
-
+                <div id="grid1" ui-grid="{ data: myData }" class="grid" ng-click="selectGridRow()"></div>
             </div>
         </div>
 </div>
