--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <script type="text/javascript" src="assets/lib/toaster.js"></script>
 <script type="text/javascript" src="assets/lib/angular-base64-upload.js"></script>
 <script type="text/javascript" src="assets/lib/ui-bootstrap.js"></script>
+<script type="text/javascript" src="assets/lib/angular-touch.js"></script>
 <script type="text/javascript" src="assets/lib/ui-grid.min.js"></script>
 
 <script type="text/javascript" src="app/app.module.js"></script>
