--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
 <script type="text/javascript" src="assets/lib/angular-base64-upload.js"></script>
 <script type="text/javascript" src="assets/lib/ui-bootstrap.js"></script>
 <script type="text/javascript" src="assets/lib/angular-touch.js"></script>
-<script type="text/javascript" src="assets/lib/ui-grid.min.js"></script>
+<script type="text/javascript" src="assets/lib/ui-grid.js"></script>
 
 <script type="text/javascript" src="app/app.module.js"></script>
 <script type="text/javascript" src="app/app.routes.js"></script>
 
 <script type="text/javascript" src="app/components/users/userService.js"></script>
 <script type="text/javascript" src="app/components/users/identity.js"></script>
+<script type="text/javascript" src="app/components/issues/issuesService.js"></script>
 
 <script type="text/javascript" src="app/components/common/directives.js"></script>
 
