--- a/app/shared/article/dashboardUserView.html
+++ b/app/shared/article/dashboardUserView.html
@@ -1,23 +1,50 @@
 
 
     <div class="user-dashboard">
-        <button type="button" class="btn-success btn-md">Dashboard</button>
-        <button type="button" class="btn-success btn-md">Projects</button>
+        <button type="button" class="btn-success btn-md" ng-click="addIssueRedirect">Dashboard</button>
+        <button type="button" class="btn-success btn-md" ng-click="addProjectRedirect">Projects</button>
         <br>
         <h1>Dashboard</h1>
         <h3>Affiliated Projects</h3>
         <div class="row">
-            <toaster-container toaster-options="{'animation-class': 'toast-center'}"></toaster-container>
-            <div class="col-md-4 col-md-offset-1" ng-controller="">
-                eeeeeee
+            <div class="col-md-4 col-md-offset-1">
+                <a href="#/projects/{{project.Id}}" class="row" ng-repeat="project in projects">{{project.Name}}</a>
             </div>
-            <div class="col-md-4 col-md-offset-1" ng-controller="issuesController">
-                <div ui-grid="gridOptions" class="grid" ng-click="selectGridRow()"></div>
-                <p>Current page:
-                    <input type="number" min="1" max="{{ pagination.getTotalPages() }}" ng-model="pagination.pageNumber" ng-change="load()">of {{ pagination.getTotalPages() }}
-                </p>
-                <button type="button" class="btn btn-success" ng-click="pagination.previousPage()">previous page</button>
-                <button type="button" class="btn btn-success" ng-click="pagination.nextPage()">next page</button>
+            <div class="col-md-4 col-md-offset-1">
+                <label for="pageSize">Issues per page</label>
+                <select ng-change="attachUserAssignedIssues(pageSize, pageNumber, orderBy)" ng-model="pageSize" id="pageSize">
+                    <option ng-selected="true" value="3">3</option>
+                    <option value="6">6</option>
+                    <option value="9">9</option>
+                </select>
+                <label for="orderBy">Issue order</label>
+                <select ng-change="attachUserAssignedIssues(pageSize, pageNumber, orderBy)" ng-model="orderBy" id="orderBy">
+                    <option value="Id">Id &#x2191</option>
+                    <option value="Id desc">Id &#x2193</option>
+                    <option value="DueDate">Due Date &#x2191</option>
+                    <option ng-selected="true" value="DueDate desc">Due Date &#x2193</option>
+                </select>
+                <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th>Issue</th>
+                        <th>Description</th>
+                        <th>Project</th>
+                        <th>Due Date</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr class ng-repeat="issue in issues">
+                        <td><a href="#/issues/{{issue.Id}}">{{issue.Title}}</a></td>
+                        <td>{{issue.Description}}</td>
+                        <td><a href="#/projects/{{issue.Project.Id}}">{{issue.Project.Name}}</a></td>
+                        <td>{{issue.DueDate}}</td>
+                    </tr>
+                    </tbody>
+                </table>
+                <ul ng-if="issuePages>1" class="pagination">
+                    <li ng-repeat="pageNumber in issuePages | range" ><a ng-click="attachUserAssignedIssues(pageSize, pageNumber, orderBy)" href="#/">{{pageNumber}}</a></li>
+                </ul>
             </div>
         </div>
 </div>
