--- a/app/shared/article/guestView.html
+++ b/app/shared/article/guestView.html
@@ -15,25 +15,20 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="loginUsername" class="col-md-3 control-label">Username</label>
+                    <label for="loginUsername" class="col-md-3 control-label">Email</label>
                     <div class="col-md-9">
-                        <input type="text" required="required" class="form-control" id="loginUsername" ng-model="loginUser.username" placeholder="Username">
+                        <input type="text" required="required" class="form-control" id="loginUsername" ng-model="loginUser.username" placeholder="Email">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="loginPassword" class="col-md-3 control-label">Password</label>
                     <div class="col-md-9">
                         <input type="password" required="required" class="form-control" id="loginPassword" ng-model="loginUser.password" placeholder="Password">
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox" ng-model="rememberMe"> Remember me
-                            </label>
-                        </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-9 col-md-offset-3">
-                        <button type="submit" class="btn btn-primary" ng-disabled="loginForm.$invalid" ng-click="login(loginUser, loginForm)">Login</button>
+                        <button type="submit" class="btn btn-primary" ng-disabled="loginForm.$invalid" ng-click="login(loginUser)">Login</button>
                     </div>
                 </div>
             </fieldset>
@@ -48,9 +43,9 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputEmail" class="col-md-3 control-label">Email</label>
+                    <label for="registerEmail" class="col-md-3 control-label">Email</label>
                     <div class="col-md-9">
-                        <input type="email" class="form-control" ng-model="user.email" id="inputEmail" required="required" placeholder="Email">
+                        <input type="email" class="form-control" ng-model="user.email" id="registerEmail" required="required" placeholder="Email">
                     </div>
                 </div>
                 <div class="form-group">
@@ -68,7 +63,7 @@
                 <div class="form-group">
                     <div class="col-md-9 col-lg-offset-3">
                         <button type="reset" class="btn btn-default">Cancel</button>
-                        <button type="submit" class="btn btn-primary" ng-disabled="registerForm.$invalid || user.password != user.confirmPassword" ng-click="register(user, registerForm)">Register</button>
+                        <button type="submit" class="btn btn-primary" ng-disabled="registerForm.$invalid || user.password != user.confirmPassword" ng-click="register(user)">Register</button>
                     </div>
                 </div>
             </fieldset>
