--- a/app/shared/header/userHeaderView.html
+++ b/app/shared/header/userHeaderView.html
@@ -29,7 +29,7 @@
                           </span>
                       </a>-->
                 </li>
-                <li ng-redirect-to="/profile">Logout</li>
+                <li ng-redirect-to="/">Logout</li>
             </ul>
         </div>
     </div>
