--- a/app/shared/article/dashboardUserView.html
+++ b/app/shared/article/dashboardUserView.html
@@ -1,6 +1,6 @@
-<div class="user-dashboard" ng-controller="homeController">
-    <button type="button" class="btn-success btn-md" ng-click="addIssueRedirect">Dashboard</button>
-    <button type="button" class="btn-success btn-md" ng-click="addProjectRedirect">Projects</button>
+<div class="user-dashboard">
+    <a class="btn btn-md btn-success" href="#/">Dashboard</a>
+    <a class="btn btn-md btn-success" href="#/projects">Projects</a>
     <br>
     <h1>Dashboard</h1>
     <div class="row">
