--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <script type="text/javascript" src="assets/lib/ui-bootstrap.js"></script>
 <script type="text/javascript" src="assets/lib/angular-touch.js"></script>
 <script type="text/javascript" src="assets/lib/ui-grid.js"></script>
+<script type="text/javascript" src="assets/lib/angular-modal-service.js"></script>
 
 <script type="text/javascript" src="app/app.module.js"></script>
 <script type="text/javascript" src="app/app.routes.js"></script>
