--- a/app/shared/header/userHeaderView.html
+++ b/app/shared/header/userHeaderView.html
@@ -7,29 +7,24 @@
         <div class="collapse navbar-collapse pull-right" id="bs-example-navbar-collapse-1" ng-controller="homeController">
             <ul class="nav navbar-nav">
                 <li>
-                    <div ng-controller="commonController">
+                    <div class="user-nav" ng-controller="commonController">
                         <!-- Simple dropdown -->
                         <span uib-dropdown on-toggle="toggled(open)">
                           <a href id="simple-dropdown" uib-dropdown-toggle>
                               Profile
                           </a>
                           <ul class="dropdown-menu" uib-dropdown-menu aria-labelledby="simple-dropdown">
-                              <li ng-redirect-to="/profile">Edit profile</li>
-                              <li ng-redirect-to="/profile/password">Change password</li>
+                              <li><a href="#/profile">Edit profile</a></li>
+                              <li><a href="/profile/password">Change password</a></li>
                           </ul>
                         </span>
                     </div>
-                     <!-- <a href id="simple-dropdown" uib-dropdown-toggle>Profile
-                          <span uib-dropdown on-toggle="toggled(open)">
-                          <ul class="dropdown-menu" uib-dropdown-menu aria-labelledby="simple-dropdown">
-                              <li ng-repeat="choice in items">
-                                  <a href>{{choice}}</a>
-                              </li>
-                          </ul>
-                          </span>
-                      </a>-->
                 </li>
-                <li ng-redirect-to="/">Logout</li>
+                <li>
+                    <div class="user-nav" ng-controller="usersController">
+                        <a href="#/logout">Logout</a>
+                    </div>
+                </li>
             </ul>
         </div>
     </div>
