--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <title>Issue Tracking System</title>
 </head>
 <body>
-
+<header ng-include="'app/shared/header.html'"></header>
 <div ng-view></div>
-
-<footer ng-include="'app/shared/footer/footerView.html'"></footer>
+<footer ng-include="'app/shared/footer.html'"></footer>
 
 <script type="text/javascript" src="assets/lib/jquery-2.1.4.min.js"></script>
 <script type="text/javascript" src="assets/lib/bootstrap.min.js"></script>
@@ -21,6 +20,7 @@
 <script type="text/javascript" src="assets/lib/angular/angular-route.js"></script>
 <script type="text/javascript" src="assets/lib/angular/angular-resource.js"></script>
 <script type="text/javascript" src="assets/lib/angular/angular-animate.js"></script>
+<script type="text/javascript" src="assets/lib/angular/angular-cookies.js"></script>
 <script type="text/javascript" src="assets/lib/ngStorage.js"></script>
 <script type="text/javascript" src="assets/lib/toaster.js"></script>
 <script type="text/javascript" src="assets/lib/angular-base64-upload.js"></script>
@@ -29,21 +29,36 @@
 <script type="text/javascript" src="assets/lib/ui-grid.js"></script>
 <script type="text/javascript" src="assets/lib/angular-modal-service.js"></script>
 
-<script type="text/javascript" src="app/app.module.js"></script>
-<script type="text/javascript" src="app/app.routes.js"></script>
+<script type="text/javascript" src="app/app-module.js"></script>
 
-<script type="text/javascript" src="app/components/users/user-services/identity.js"></script>
-<script type="text/javascript" src="app/components/users/user-services/users-service.js"></script>
-<script type="text/javascript" src="app/components/projects/project-services/projects-service.js"></script>
-<script type="text/javascript" src="app/components/issues/issue-services/issues-service.js"></script>
+<script type="text/javascript" src="app/components/home/home-module.js"></script>
+<script type="text/javascript" src="app/components/home/home-controller.js"></script>
 
-<script type="text/javascript" src="app/components/common/directives.js"></script>
+<script type="text/javascript" src="app/components/users/users-module.js"></script>
+<script type="text/javascript" src="app/components/users/users-services/authentication.js"></script>
+<script type="text/javascript" src="app/components/users/users-services/users-service.js"></script>
+<script type="text/javascript" src="app/components/users/users-controllers/all-users-controller.js"></script>
+<script type="text/javascript" src="app/components/users/users-controllers/change-user-password-controller.js"></script>
+<script type="text/javascript" src="app/components/users/users-controllers/edit-user-profile-controller.js"></script>
+<script type="text/javascript" src="app/components/users/users-controllers/logout-controller.js"></script>
 
-<script type="text/javascript" src="app/components/common/CommonController.js"></script>
-<script type="text/javascript" src="app/components/home/HomeController.js"></script>
-<script type="text/javascript" src="app/components/users/user.js"></script>
-<script type="text/javascript" src="app/components/projects/project.js"></script>
-<script type="text/javascript" src="app/components/issues/IssuesController.js"></script>
+<script type="text/javascript" src="app/components/projects/projects-module.js"></script>
+<script type="text/javascript" src="app/components/projects/projects-services/projects-service.js"></script>
+<script type="text/javascript" src="app/components/projects/projects-controllers/add-issue-to-project.js"></script>
+<script type="text/javascript" src="app/components/projects/projects-controllers/add-project-controller.js"></script>
+<script type="text/javascript" src="app/components/projects/projects-controllers/all-projects-controller.js"></script>
+<script type="text/javascript" src="app/components/projects/projects-controllers/edit-project-controller.js"></script>
+<script type="text/javascript" src="app/components/projects/projects-controllers/project-controller.js"></script>
+
+<script type="text/javascript" src="app/components/issues/issues-module.js"></script>
+<script type="text/javascript" src="app/components/issues/issues-services/issues-service.js"></script>
+<script type="text/javascript" src="app/components/issues/issues-controllers/issue-controller.js"></script>
+<script type="text/javascript" src="app/components/issues/issues-controllers/edit-issue-controller.js"></script>
+
+<script type="text/javascript" src="app/components/common/common-module.js"></script>
+<script type="text/javascript" src="app/components/common/common-controllers/dropdown-controller.js"></script>
+<script type="text/javascript" src="app/components/common/common-controllers/modal-controller.js"></script>
+<script type="text/javascript" src="app/components/common/common-directives/redirect-directive.js"></script>
 
 </body>
 </html>
