--- a/app/shared/header.html
+++ b/app/shared/header.html
@@ -26,6 +26,7 @@
                 </li>
                 <li>
                     <div class="user-nav" ng-controller="LogoutController">
+                        <button type="submit" class="btn btn-primary" ng-click="logout()">Logout</button>
                         <a href="#/logout">Logout</a>
                     </div>
                 </li>
