--- a/app/shared/footer.html
+++ b/app/shared/footer.html
@@ -1,6 +1,7 @@
 <footer class="text-center">
     <small>
-        <strong>Author:</strong> <a href="https://github.com/" target="_blank"></a>
+        <strong>Author: </strong>
+        <a href="https://github.com/VirginiaBobotsova/IssueTrackingSystem" target="_blank">Virginia Bobotsova</a>
         <br>
         <strong>&copy; 2016</strong>
     </small>
