--- a/app/shared/header.html
+++ b/app/shared/header.html
@@ -26,8 +26,7 @@
                 </li>
                 <li>
                     <div class="user-nav" ng-controller="LogoutController">
-                        <button type="submit" class="btn btn-primary" ng-click="logout()">Logout</button>
-                        <a href="#/logout">Logout</a>
+                        <button type="submit" class="btn btn-sm btn-success" ng-click="logout()">Logout</button>
                     </div>
                 </li>
             </ul>
