--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 <footer ng-include="'app/shared/footer.html'"></footer>
 
 <script type="text/javascript" src="assets/lib/jquery-2.1.4.min.js"></script>
+<script type="text/javascript" src="assets/lib/noty/jquery.noty.js"></script>
+<script type="text/javascript" src="assets/lib/noty/packaged/jquery.noty.packaged.js"></script>
+<script type="text/javascript" src="assets/lib/noty/layouts/inline.js"></script>
+<script type="text/javascript" src="assets/lib/noty/layouts/topCenter.js"></script>
+<script type="text/javascript" src="assets/lib/noty/themes/relax.js"></script>
 <script type="text/javascript" src="assets/lib/bootstrap.min.js"></script>
 <script type="text/javascript" src="assets/lib/angular/angular.js"></script>
 <script type="text/javascript" src="assets/lib/angular/angular-route.js"></script>
@@ -61,6 +66,7 @@
 <script type="text/javascript" src="app/components/issues/issues-controllers/edit-issue-controller.js"></script>
 
 <script type="text/javascript" src="app/components/common/common-module.js"></script>
+<script type="text/javascript" src="app/components/common/common-services/notify-service.js"></script>
 <script type="text/javascript" src="app/components/common/common-controllers/main-controller.js"></script>
 <script type="text/javascript" src="app/components/common/common-controllers/dropdown-controller.js"></script>
 <script type="text/javascript" src="app/components/common/common-controllers/modal-controller.js"></script>
